--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,15 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap"
+      rel="stylesheet"
+    />
+    <link href="style.css" rel="stylesheet" />
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd">
       <div class="container-fluid justify-content-end">
         <div class="navbar-nav">
           <a class="nav-link" href="index.html">Home</a>
@@ -35,7 +40,7 @@
             <a
               href="mailto: elizabethchristman31@gmail.com"
               class="btn btn-lg btn-outline-dark mt-auto align-self-start"
-              >Email</a
+              >Email me</a
             >
           </div>
         </div>
