--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200&display=swap"
       rel="stylesheet"
     />
+    <link href="style.css" rel="stylesheet" />
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd">
       <div class="container-fluid justify-content-end">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="index.html"
@@ -36,7 +37,7 @@
         <div class="row">
           <div class="col-6">
             <p>Hi, my name is</p>
-            <h2>Elizabeth Christman.</h2>
+            <h2><b>Elizabeth Christman.</b></h2>
             <p>
               I'm a software engineer with interests in machine learning and
               data analytics. Currently, I'm a <b>student</b> at Virginia Tech
