--- a/projects.html
+++ b/projects.html
@@ -16,10 +16,15 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap"
+      rel="stylesheet"
+    />
+    <link href="style.css" rel="stylesheet" />
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd">
       <div class="container-fluid justify-content-end">
         <div class="navbar-nav">
           <a class="nav-link" href="index.html">Home</a>
@@ -35,11 +40,11 @@
       <div class="container-md">
         <div
           class="row text-center"
-          style="margin-top: 10px; margin-bottom: 25px"
+          style="margin-top: 25px; margin-bottom: 25px"
         >
           <h3>Featured Project</h3>
         </div>
-        <div class="row justify-content-center" style="margin-bottom: 50px">
+        <div class="row justify-content-center" style="margin-bottom: 100px">
           <div class="col-4">
             <h4>2D Jupyter</h4>
             <p>
@@ -53,6 +58,12 @@
                 >Link</a
               >
             </p>
+            <p>Related Publications: <br>
+              <div class="publications">
+                J. Harden, E. Christman, N. Kirshenbaum, J. Wenskovitch, J. Leigh and C. North, "Exploring Organization of Computational Notebook Cells in 2D Space," 2022 IEEE Symposium on Visual Languages and Human-Centric Computing (VL/HCC), Roma, Italy, 2022, pp. 1-6, doi:10.1109/VL/HCC53370.2022.9833128.
+              </div>
+
+            </p>
           </div>
           <div class="col-5">
             <img src="images/p8-notebook.png" class="img-fluid" alt="..." />
@@ -60,7 +71,6 @@
         </div>
         <div>
           <h3>Other Projects</h3>
-
           <div class="container">
             <div class="row">
               <div class="col-lg-4 mb-3 d-flex align-items-stretch">
