--- a/resume.html
+++ b/resume.html
@@ -10,10 +10,15 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap"
+      rel="stylesheet"
+    />
+    <link href="style.css" rel="stylesheet" />
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd">
       <div class="container-fluid justify-content-end">
         <div class="navbar-nav">
           <a class="nav-link" href="index.html">Home</a>
@@ -28,7 +33,7 @@
     <div class="container-md">
       <div
         class="d-flex justify-content-center"
-        style="margin-top: 10px; margin-bottom: 25px"
+        style="margin-top: 25px; margin-bottom: 25px"
       >
         <a
           class="btn btn btn-outline-dark mt-auto align-self-start"
@@ -66,6 +71,24 @@
         <div class="row justify-content-center">
           <div class="col-3">
             <p>
+              <b>Virginia Tech</b> <br />
+              Graduate Research Assistant
+            </p>
+          </div>
+          <div class="col-2 text-end">Spring 2022, Spring 2023</div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-3">
+            <p>
+              <b>Virginia Tech</b> <br />
+              Graduate Teaching Assistant <br />
+            </p>
+          </div>
+          <div class="col-2 text-end">Fall 2021, Fall 2022</div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-3">
+            <p>
               <b>Splunk</b> <br />
               Software Engineering Intern
             </p>
@@ -94,7 +117,7 @@
           <div class="col-2 text-end">May - August 2019</div>
         </div>
       </div>
-      <div class="container text-center" style="margin-bottom: 25px">
+      <!-- <div class="container text-center" style="margin-bottom: 25px">
         <div class="row text-center">
           <h3>Skills</h3>
         </div>
@@ -106,7 +129,7 @@
         <div class="row justify-content-center">
           <div class="col-6"><b>Frameworks:</b> React, Jupyter Notebooks</div>
         </div>
-      </div>
+      </div> -->
     </div>
   </body>
   <footer>
