--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,11 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid justify-content-end">
         <div class="navbar-nav">
           <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="about.html">About Me</a>
           <a class="nav-link" href="projects.html">Projects</a>
           <a class="nav-link" href="resume.html">Resume</a>
           <a class="nav-link active" aria-current="page" href="contact.html"
@@ -31,32 +32,26 @@
       </div>
     </nav>
     <main>
-      <div class="container text-center" style="margin-top: 50px">
+      <div class="container text-center" style="margin-top: 10vh">
         <div class="row">
           <h3>Get in touch with me!</h3>
         </div>
-        <div class="row" style="margin-top: 25px">
-          <div class="col">
-            <a
-              href="mailto: elizabethchristman31@gmail.com"
-              class="btn btn-lg btn-outline-dark mt-auto align-self-start"
-              >Email me</a
-            >
-          </div>
+        <div class="row justify-content-center" style="margin-top: 50px">
+          <b>Email:</b> elizabethchristman31@gmail.com <br />
+          <b>Phone:</b> (713) 819-1523
         </div>
-        <div class="row justify-content-md-center" style="margin-top: 10%">
-          <h5>Other Links</h5>
-          <div class="col-md-auto">
-            <a href="https://github.com/elizabethchristman"
-              ><img
-                src="images/github-icon.png"
-                style="width: 50px; height: 50px"
-            /></a>
-          </div>
-          <div class="col-md-auto">
+        <div class="row justify-content-center" style="margin-top: 50px">
+          <div class="col-1">
             <a href="https://linkedin.com/in/elizabethchristman"
               ><img
                 src="images/linkedin-icon.png"
+                style="width: 50px; height: 50px"
+            /></a>
+          </div>
+          <div class="col-1">
+            <a href="https://github.com/elizabethchristman"
+              ><img
+                src="images/github-icon.png"
                 style="width: 50px; height: 50px"
             /></a>
           </div>
