--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid justify-content-end">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="index.html"
             >Home</a
           >
+          <a class="nav-link" href="about.html">About Me</a>
           <a class="nav-link" href="projects.html">Projects</a>
           <a class="nav-link" href="resume.html">Resume</a>
           <a class="nav-link" href="contact.html">Contact</a>
@@ -33,25 +34,27 @@
       </div>
     </nav>
     <main>
-      <div class="container-md" style="margin-top: 100px; margin-left: 200px">
+      <div class="container-md" style="margin-top: 50vh; margin-left: 40vh">
         <div class="row">
           <div class="col-6">
-            <p>Hi, my name is</p>
-            <h2><b>Elizabeth Christman.</b></h2>
-            <p>
-              I'm a software engineer with interests in machine learning and
-              data analytics. Currently, I'm a <b>student</b> at Virginia Tech
-              completing my M.S in Computer Science.
-            </p>
+            <p style="font-size: 30px">Hi, my name is</p>
+            <h1 style="font-size: 60px"><b>Elizabeth Christman.</b></h1>
           </div>
-        </div>
-        <div class="row" style="margin-top: 2%">
-          <div class="col-md-auto">
-            <a
-              href="projects.html"
-              class="btn btn btn-outline-dark mt-auto align-self-start"
-              >Check out what I've been working on!</a
-            >
+          <div class="col-6">
+            <div class="col-md-auto" style="margin-bottom: 25px">
+              <a
+                href="projects.html"
+                class="btn btn btn-outline-dark mt-auto align-self-start"
+                >Latest projects</a
+              >
+            </div>
+            <div class="col-md-auto">
+              <a
+                href="ElizabethChristmanResume.pdf"
+                class="btn btn btn-outline-dark mt-auto align-self-start"
+                >Download my resume</a
+              >
+            </div>
           </div>
         </div>
       </div>
