--- a/about.html
+++ b/about.html
@@ -1,47 +1,54 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+  <head>
+    <title>Elizabeth Christman</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <link href="style.css" rel="stylesheet" />
+  </head>
 
-<head>
-    <title>About Me</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-</head>
-
-
-<body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="about.html">About Me</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Projects and Research</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="resume.html">Resume</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Me</a>
-                    </li>
-                </ul>
-            </div>
+  <body>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid justify-content-end">
+        <div class="navbar-nav">
+          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="about.html"
+            >About Me</a
+          >
+          <a class="nav-link" href="projects.html">Projects</a>
+          <a class="nav-link" href="resume.html">Resume</a>
+          <a class="nav-link" href="contact.html">Contact</a>
         </div>
+      </div>
     </nav>
-    <div class="container">
-        
-
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
-
-</body>
-
+    <main>
+      <div class="container-md" style="margin-top: 10%">
+        <div class="row justify-content-md-center">
+          <div class="col-3">
+            <img src="images/headshot.png" style="height: 100%; width: 100%" />
+          </div>
+          <div class="col-6" style="margin-top: 5%">
+            <p>
+              Hi there! I'm a software engineer with interests in data analytics
+              and machine learning. I completed my B.S in Computer Science at
+              Texas A&M in 2021. I am currently finishing my M.S in Computer
+              Science at Virginia Tech.
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
