--- a/resume.html
+++ b/resume.html
@@ -18,10 +18,11 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid justify-content-end">
         <div class="navbar-nav">
           <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="about.html">About Me</a>
           <a class="nav-link" href="projects.html">Projects</a>
           <a class="nav-link active" aria-current="page" href="resume.html"
             >Resume</a
@@ -30,106 +31,65 @@
         </div>
       </div>
     </nav>
-    <div class="container-md">
-      <div
-        class="d-flex justify-content-center"
-        style="margin-top: 25px; margin-bottom: 25px"
-      >
-        <a
-          class="btn btn btn-outline-dark mt-auto align-self-start"
-          href="ElizabethChristmanResume.pdf"
-          >Download a PDF version of my resume</a
-        >
-      </div>
-      <div class="container" style="margin-bottom: 25px">
-        <div class="row text-center">
-          <h3>Education</h3>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-3">
-            <p>
-              <b>M.S Computer Science</b> <br />
-              Virginia Tech
-            </p>
-          </div>
-          <div class="col-2 text-end">2023</div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-3">
-            <p>
-              <b>B.S Computer Science</b> <br />
-              Texas A&M University
-            </p>
-          </div>
-          <div class="col-2 text-end">2021</div>
+    <div class="container-md" style="margin-top: 5%; margin-left: 20%">
+      <div class="row">
+        <div class="col-2 text-end"><h4>2022</h4></div>
+        <div class="col-6" style="margin-left: 10px">
+          <h4>Splunk</h4>
+          <b>Software Engineering Intern</b>
+          <ul>
+            <li>
+              Implemented Python scripts to automate Windows build of Splunk App
+              for Stream, an add-on that allows the user to capture and analyze
+              streams of network event data, reducing build time by more than
+              90%.
+            </li>
+          </ul>
         </div>
       </div>
-      <div class="container" style="margin-bottom: 25px">
-        <div class="row text-center">
-          <h3>Work Experience</h3>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-3">
-            <p>
-              <b>Virginia Tech</b> <br />
-              Graduate Research Assistant
-            </p>
-          </div>
-          <div class="col-2 text-end">Spring 2022, Spring 2023</div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-3">
-            <p>
-              <b>Virginia Tech</b> <br />
-              Graduate Teaching Assistant <br />
-            </p>
-          </div>
-          <div class="col-2 text-end">Fall 2021, Fall 2022</div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-3">
-            <p>
-              <b>Splunk</b> <br />
-              Software Engineering Intern
-            </p>
-          </div>
-          <div class="col-2 text-end">May - August 2022</div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-3">
-            <p>
-              <b>JP Morgan Chase</b> <br />
-              Software Engineering Intern
-            </p>
-          </div>
-          <div class="col-2 text-end">
-            June - August 2021 <br />
-            July - August 2020
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-3">
-            <p>
-              <b>Fidelity Investments</b> <br />
-              Software Engineering Intern
-            </p>
-          </div>
-          <div class="col-2 text-end">May - August 2019</div>
+      <div class="row">
+        <div class="col-2 text-end"><h4>2021</h4></div>
+        <div class="col-6" style="margin-left: 10px">
+          <h4>JP Morgan Chase</h4>
+          <b>Software Engineering Intern</b>
+          <ul>
+            <li>
+              Developed automation scripts in Python and Groovy for internal
+              company Jira instances to reduce time needed to bulk update
+              project configurations by 50%
+            </li>
+          </ul>
         </div>
       </div>
-      <!-- <div class="container text-center" style="margin-bottom: 25px">
-        <div class="row text-center">
-          <h3>Skills</h3>
+      <div class="row">
+        <div class="col-2 text-end"><h4>2020</h4></div>
+        <div class="col-6" style="margin-left: 10px">
+          <h4>JP Morgan Chase</h4>
+          <b>Software Engineering Intern</b>
+          <ul>
+            <li>
+              Designed and built a full-stack web application in 5 weeks for
+              Interfaith Ministries for Greater Houston for managing data
+              related to their refugee mentorship program, eliminating the need
+              to manage multiple documents and spreadsheets
+            </li>
+          </ul>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-6">
-            <b>Programming Languages:</b> Python, C++, Java, HTML/CSS
-          </div>
+      </div>
+      <div class="row">
+        <div class="col-2 text-end"><h4>2019</h4></div>
+        <div class="col-6" style="margin-left: 10px">
+          <h4>Fidelity Investments</h4>
+          <b>Software Engineering Intern</b>
+          <ul>
+            <li>
+              Investigated and developed a Java solution for a bug in the
+              internal file archive process in order to prevent program crashes
+              when uploading file types that were no longer supported.
+            </li>
+          </ul>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-6"><b>Frameworks:</b> React, Jupyter Notebooks</div>
-        </div>
-      </div> -->
+      </div>
     </div>
   </body>
   <footer>
