--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,8 @@
             <h4>2D Jupyter</h4>
             <p>
               A Jupyter Notebook extension that enables multi-column layouts and
-              freeform cell placement. Completed
+              freeform cell placement. Completed in fulfillment of masters
+              thesis requirements.
             </p>
             <p></p>
             Related Publications: <br />
