edited projects blurb

--- a/projects.html
+++ b/projects.html
@@ -50,8 +50,8 @@
             <h4>2D Jupyter</h4>
             <p>
               A Jupyter Notebook extension that enables multi-column layouts and
-              freeform cell placement. Completed in fulfillment of masters
-              thesis requirements.
+              freeform cell placement. Completed in fulfillment of M.S thesis
+              requirements.
             </p>
             <p></p>
             Related Publications: <br />
