--- a/about.html
+++ b/about.html
@@ -42,9 +42,14 @@
           <div class="col-6" style="margin-top: 5%">
             <p>
               Hi there! I'm a software engineer with interests in data analytics
-              and machine learning. I completed my B.S in Computer Science at
-              Texas A&M in 2021. I am currently finishing my M.S in Computer
-              Science at Virginia Tech.
+              and machine learning. I earned a B.S in Computer Science from
+              Texas A&M University in 2021, and completed a M.S in Computer
+              Science from Virginia Tech in 2023. During my masters degree, I
+              focused on data visualization and human-computer interaction,
+              completing a thesis on how 2-dimensional computational notebooks
+              can impact the effectiveness of data science work. Since 2023, I
+              have been working at Leidos as a software developer, working on
+              sonar simulation software.
             </p>
           </div>
         </div>
