--- a/projects.html
+++ b/projects.html
@@ -130,12 +130,12 @@
                             PCA, MDS, and t-SNE methods.
                             <img
                               src="images/observable2.png"
-                              style="height: 100%; width: 100%"
+                              style="height: 75%; width: 75%"
                             />
                           </div>
                           <div class="modal-footer">
                             <button
-                              onclick="window.location.href='https://observablehq.com/@3e787c1af6c5a437/a-comparative-overview-of-dimension-reduction-methods'"
+                              onclick="window.location.href='https\://observablehq.com/@3e787c1af6c5a437/a-comparative-overview-of-dimension-reduction-methods'"
                               type="button"
                               class="btn btn-outline-dark"
                             >
@@ -190,7 +190,7 @@
                             music from the 1960s - 2010s.
                             <img
                               src="images/music-decades.png"
-                              style="height: 100%; width: 100%"
+                              style="height: 75%; width: 75%"
                             />
                           </div>
                           <div class="modal-footer">
