--- a/projects.html
+++ b/projects.html
@@ -126,11 +126,11 @@
                           </div>
                           <div class="modal-body">
                             An interactive Observable Notebook explaining
-                            dimension reduction and providing a comparison of
-                            PCA, MDS, and t-SNE methods.
+                            dimension reduction and comparing PCA, MDS, and
+                            t-SNE methods.
                             <img
                               src="images/observable2.png"
-                              style="height: 75%; width: 75%"
+                              style="height: 80%; width: 80%"
                             />
                           </div>
                           <div class="modal-footer">
