Update resume links

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             </div>
             <div class="col-md-auto">
               <a
-                href="ElizabethChristmanResume.pdf"
+                href="resume.html"
                 class="btn btn btn-outline-dark mt-auto align-self-start"
-                >Download my resume</a
+                >Check out my resume</a
               >
             </div>
           </div>
