--- a/resume.html
+++ b/resume.html
@@ -31,65 +31,20 @@
         </div>
       </div>
     </nav>
-    <div class="container-md" style="margin-top: 5%; margin-left: 20%">
-      <div class="row">
-        <div class="col-2 text-end"><h4>2022</h4></div>
-        <div class="col-6" style="margin-left: 10px">
-          <h4>Splunk</h4>
-          <b>Software Engineering Intern</b>
-          <ul>
-            <li>
-              Implemented Python scripts to automate Windows build of Splunk App
-              for Stream, an add-on that allows the user to capture and analyze
-              streams of network event data, reducing build time by more than
-              90%.
-            </li>
-          </ul>
-        </div>
+    <div style="text-align: center">
+      <div class="col-md-auto" style="margin-top: 25px; margin-bottom: 25px">
+        <a
+          href="Elizabeth_Christman_Resume.pdf"
+          class="btn btn btn-outline-dark mt-auto align-self-start"
+          >Download a copy</a
+        >
       </div>
-      <div class="row">
-        <div class="col-2 text-end"><h4>2021</h4></div>
-        <div class="col-6" style="margin-left: 10px">
-          <h4>JP Morgan Chase</h4>
-          <b>Software Engineering Intern</b>
-          <ul>
-            <li>
-              Developed automation scripts in Python and Groovy for internal
-              company Jira instances to reduce time needed to bulk update
-              project configurations by 50%
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-2 text-end"><h4>2020</h4></div>
-        <div class="col-6" style="margin-left: 10px">
-          <h4>JP Morgan Chase</h4>
-          <b>Software Engineering Intern</b>
-          <ul>
-            <li>
-              Designed and built a full-stack web application in 5 weeks for
-              Interfaith Ministries for Greater Houston for managing data
-              related to their refugee mentorship program, eliminating the need
-              to manage multiple documents and spreadsheets
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-2 text-end"><h4>2019</h4></div>
-        <div class="col-6" style="margin-left: 10px">
-          <h4>Fidelity Investments</h4>
-          <b>Software Engineering Intern</b>
-          <ul>
-            <li>
-              Investigated and developed a Java solution for a bug in the
-              internal file archive process in order to prevent program crashes
-              when uploading file types that were no longer supported.
-            </li>
-          </ul>
-        </div>
-      </div>
+
+      <embed
+        src="Elizabeth_Christman_Resume.pdf"
+        width="800px"
+        height="1100px"
+      />
     </div>
   </body>
   <footer>
